[project]
name = "pypsatosienna"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "prakaa", email = "abiprakash007@gmail.com" }
]
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "pypsa>=0.28.0",
    "matplotlib>=3.9.1",
    "highspy>=1.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipdb>=0.13.13",
    "ipython>=8.26.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pypsatosienna"]
